# recombox_subtitle_provider

./: Cargo.toml  LICENSE  README.md
src/: get_chapters.rs  get_subtitles.rs  global_types.rs  lib.rs  search.rs
src/manage_subtitle/: get_all_installed_subtitles.rs  get_installed_subtitles.rs  install_subtitle.rs  mod.rs  remove_installed_subtitle.rs
