[package]
name = "recombox_subtitle_provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
futures-util = "0.3.32"
html-escape = "0.2.14"
once_cell = "1.21.4"
redb = "4.1.0"
reqwest = {version = "0.12.28", default-features = false, features = ["rustls-tls", "json", "multipart", "blocking", "stream"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
snowid = "2.0.3"
tokio = {version = "1.50.0", features = ["full"]}
visdom = "1.0.4"
walkdir = "2.5.0"
zip = "8.6.0"
